--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "alhomsai_typed",
+  "homepage": "https://iAbdullahEskeif.github.io/store_frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,13 +8,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.25.2",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-router": "^1.114.27",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
